# Map-App-Project

./: .gitignore  CMakeLists.txt  README.md  data.csv  gen_clean_image.cpp  gen_csv.cpp  interpolation.py  map_editor.py  path_gen.cpp  type.json
www/: algorithm.js  graph.json  index.html  locations.json  school-map.html  script.js  styles.css
